<resources>
    <string name="app_name">PaoPao</string>

    <!--login-->
    <string name="lo_login">登录</string>
    <string name="lo_tel">请输入手机号</string>
    <string name="lo_password">请输入密码</string>
    <string name="lo_registered">注册帐号</string>
    <string name="lo_forgetpsd">忘记密码</string>
    <string name="reg_reg">注册</string>
    <string name="rer_yanzhengma">获取验证码</string>
    <string name="rer_inputyanzhengma">输入验证码</string>
    <string name="reg_mima">输入密码，至少6位</string>
    <string name="reg_yaoqingren">输入邀请人帐号（选填）</string>
    <string name="reg_login">已有帐号登录</string>
    <string name="reg_xieyi">注册代表同意该软件用户协议</string>


    <!--menu-->
    <string name="menu_home">首页</string>
    <string name="menu_find">发现</string>
    <string name="menu_message">消息</string>
    <string name="menu_mine">我的</string>

    <!--home-->
    <string name="ho_girl">女神</string>
    <string name="ho_boy">男神</string>
    <string name="ho_more">更多</string>
    <string name="ho_meilizhi">魅力排行榜</string>
    <string name="ho_fuhao">富豪排行榜</string>

    <!--find-->
    <string name="fi_yaoyiyao">摇一摇</string>
    <string name="fi_all">全部</string>
    <string name="fi_mingpao">名泡</string>
    <string name="fi_yuanfen">缘分</string>
    <string name="fi_xinren">新人</string>
    <string name="fi_tongcheng">同城</string>
    <string name="fi_meili">魅力值</string>
    <string name="fi_tuhao">土豪值</string>

    <!--message-->
    <string name="mess_paoyou">泡友</string>
    <string name="mess_guanzhu">关注</string>
    <string name="mess_fensi">粉丝</string>

    <!--mine-->
    <string name="min_title">个人中心</string>
    <string name="min_fensi">粉丝</string>
    <string name="min_guanzhu">关注</string>
    <string name="min_dianzan">点赞</string>
    <string name="min_paobi">泡币</string>
    <string name="min_meilizhi">魅力值</string>
    <string name="min_chongzhipaobi">充值泡币</string>
    <string name="min_woyaotixian">我要提现</string>
    <string name="min_wodexiangce">我的相册</string>
    <string name="min_wodeshouru">我的收入</string>
    <string name="min_lianxifangshi">联系方式</string>
    <string name="min_yaoqingzhuanqian">邀请赚钱</string>
    <string name="min_pinlunzhuanqian">评论赚钱</string>

    <!--info-->
    <string name="inf_title">个人资料</string>
    <string name="inf_jubao">举报</string>
    <string name="inf_fangke">访客</string>
    <string name="inf_xiangce">相册</string>
    <string name="inf_ziliao">资料</string>
    <string name="inf_gexingqinming">个性签名</string>
    <string name="inf_zhucedizhi">注册时间</string>
    <string name="inf_dizhi">地址</string>
    <string name="inf_nianling">年龄</string>
    <string name="inf_shengao">身高</string>
    <string name="inf_paopao">泡泡ID</string>
    <string name="inf_lianxifangshi">联系方式</string>
    <string name="inf_qqhao">QQ号</string>
    <string name="inf_shoujihao">手机号</string>
    <string name="inf_weixinhao">微信号</string>
    <string name="inf_liwu">礼物</string>
    <string name="inf_siliao">私聊</string>
    <string name="inf_songliwu">送礼物</string>
    <string name="inf_guanzhu">关注</string>
    <string name="inf_dianzan">点赞</string>

    <!--setting-->
    <string name="setting_xiaoxituisong">消息推送</string>
    <string name="setting_yijianfankui">意见反馈</string>
    <string name="setting_yonghubidu">用户必读</string>
    <string name="setting_zaixiankefu">在线客服</string>
    <string name="setting_qingchuhuancun">清除缓存</string>
    <string name="setting_guanyupaopao">关于泡泡</string>
    <string name="setting_tuichuzhanghao">退出当期帐号</string>
    <string name="setting_setting">设置</string>

    <!--recharge-->
    <string name="rech_title">充值</string>
    <string name="rech_xuanzechongzhijine">选择充值金额</string>
    <string name="rech_chongzhi">如果充值遇到问题请及时联系客服</string>
    <string name="rech_lianxikefu">联系客服</string>
    <string name="rech_yuan">￥%s</string>
    <string name="rech_paobi">%s泡币</string>

    <!--cash-->
    <string name="cash_title">提现</string>
    <string name="cash_mingxi">明细</string>
    <string name="cash_zhifubaozhang">支付宝账号</string>
    <string name="cash_zhifubaoxingming">支付宝姓名</string>
    <string name="cash_phone">手机号码</string>
    <string name="cash_cash">提现金额</string>
    <string name="cash_qingshuruzhifubaozhanghao">请输入支付宝认证过的帐号</string>
    <string name="cash_qingshuruzhifubaoxingming">请输入支付宝真实姓名</string>
    <string name="cash_qingshuruzhenshiyouxiaolianxifangshi">请输入真实有效联系方式</string>
    <string name="cash_qingshurujine">请输入金额</string>
    <string name="cash_paobi">泡币：</string>
    <string name="cash_paobiduihuanbili">泡币兑换现金比例：</string>
    <string name="cash_tixiandaozhifubao">提现到支付宝</string>
    <string name="cash_tixianshuoming">提现说明：</string>
    <string name="cash_tv1">1、提高兑换比例的方法为邀请好友，详情请见分享赚钱。</string>
    <string name="cash_tv2">2、提现建议加官方支付宝帐号18071874701。</string>
    <string name="cash_tv3">3、提现处理会在1-7个工作日，期间可以咨询客服。</string>
    <string name="cash_tv4">4、请认真填写支付宝帐号和帐号对应的姓名。</string>
    <string name="cash_tv5">5、最低提现金额50元。</string>

    <!--contact-->
    <string name="cont_title">联系方式</string>
    <string name="cont_qq">1、QQ号</string>
    <string name="cont_weixin">2、微信号</string>
    <string name="cont_shouji">3、手机号</string>
    <string name="cont_beichakanpaobi">被查看所需泡币:</string>
    <string name="cont_queding">确定</string>
    <string name="cont_shuoming">说明：</string>
    <string name="cont_tv1">1、用户查看您的联系方式使用的泡币都归您所有。</string>
    <string name="cont_tv2">2、请保证您填写的联系方式正确，如填写虚假联系方式，被举报我们将会进行封号处理。</string>

    <!--photo-->
    <string name="photo_title">我的相册</string>
    <string name="photo_tv1">说明：可以添加9张照片，用户查看您的照片，需要给予您相应的泡币，具体金额由您自己设置。</string>
    <string name="photo_tv2">设置用户查看你的每张照片需要支付给您的泡币：</string>

    <!--invite-->
    <string name="invite_tv1">奖励一：10泡币奖励</string>
    <string name="invite_tv2">奖励二：10%消费提成</string>
    <string name="invite_tv3">奖励三：5%收入提成</string>
    <string name="invite_tv4">奖励四：提高泡币兑换现金比例</string>
    <string name="invite_tvs1">每成功邀请一个好友，即可获得10泡币的奖励</string>
    <string name="invite_tvs2">每成功邀请一个好友，您将获得好友消费泡币的10%的提成</string>
    <string name="invite_tvs3">每成功邀请一个好友，您将获得好友收入泡币的5%的提成</string>
    <string name="invite_tvs4">每成功邀请一个好友，且好友充值成功一笔泡币，您的泡币兑换现金比例就可以提高1%，最多提高到70%</string>
    <string name="invite_fenxiang">分享海报</string>
    <string name="invite_yaoqing">马上邀请</string>
    <string name="invite_t1">1、您可以根据您的需要选择合适您的海报。</string>
    <string name="invite_t2">2、点击保存图片即可生成海报并且保存到您的相册。</string>
    <string name="invite_t3">3、请注意提醒您邀请的人，注册时邀请人ID的正确填写（如果注册时没有填写您的邀请人泡泡ID，将视为不是您的邀请）。</string>
    <string name="invite_t4">4、您保存的图片，图片里面的邀请ID将自动为您的ID。</string>

    <!--income-->
    <string name="income_liwu">礼物收入：</string>
    <string name="income_xiangce">相册收入：</string>
    <string name="income_lianxifangshi">联系方式收入:</string>
    <string name="income_weixin">微信号</string>
    <string name="income_shouji">手机号</string>
    <string name="income_QQ">QQ号</string>
    <string name="income_yaoqinghaoyou">邀请好友收入：</string>
    <string name="income_yaoqingshouru">邀请收入</string>
    <string name="income_yaoqingticheng">邀请提成</string>
    <string name="income_paopao">泡泡名</string>
    <string name="income_id">泡泡ID</string>
    <string name="income_tichengpaobi">提成泡币数</string>
    <string name="income_zongshouru">总收入：</string>
    <string name="income_qutixian">去提现</string>


    <string name="str_loadmore">正在加载更多...</string>
    <string name="str_loadmore_faild">加载失败，点击重试...</string>
    <string name="str_loadMore_empty">没有更多数据了...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
