<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_F4F4F4"
    android:orientation="vertical"
    tools:context="com.user.paopao.main.mine.contactway.ContactWayActivity">

    <com.user.paopao.widget.titleview.TitleView
        android:id="@+id/mtitleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_44"
        android:layout_marginLeft="@dimen/dimen_12"
        android:gravity="center_vertical"
        android:text="@string/cont_qq"
        android:textColor="@color/c_808080"
        android:textSize="@dimen/text_13" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_49"
        android:background="@color/c_ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_12"
            android:text="644904087"
            android:textColor="@color/c_333333"
            android:textSize="@dimen/text_14" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dimen_12"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cont_beichakanpaobi"
                android:textColor="@color/c_333333"
                android:textSize="@dimen/text_13" />

            <EditText
                android:id="@+id/paobi_qq"
                android:layout_width="@dimen/dimen_34"
                android:layout_height="wrap_content"
                android:textColor="@color/c_fc508e"
                android:textSize="@dimen/text_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/min_paobi"
                android:textColor="@color/c_fc508e"
                android:textSize="@dimen/text_14" />
        </LinearLayout>


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_44"
        android:layout_marginLeft="@dimen/dimen_12"
        android:gravity="center_vertical"
        android:text="@string/cont_weixin"
        android:textColor="@color/c_808080"
        android:textSize="@dimen/text_13" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_49"
        android:background="@color/c_ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_12"
            android:text="644904087"
            android:textColor="@color/c_333333"
            android:textSize="@dimen/text_14" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dimen_12"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cont_beichakanpaobi"
                android:textColor="@color/c_333333"
                android:textSize="@dimen/text_13" />

            <EditText
                android:id="@+id/paobi_weixin"
                android:layout_width="@dimen/dimen_34"
                android:layout_height="wrap_content"
                android:textColor="@color/c_fc508e"
                android:textSize="@dimen/text_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/min_paobi"
                android:textColor="@color/c_fc508e"
                android:textSize="@dimen/text_14" />
        </LinearLayout>


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_44"
        android:layout_marginLeft="@dimen/dimen_12"
        android:gravity="center_vertical"
        android:text="@string/cont_shouji"
        android:textColor="@color/c_808080"
        android:textSize="@dimen/text_13" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_49"
        android:background="@color/c_ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_12"
            android:text="644904087"
            android:textColor="@color/c_333333"
            android:textSize="@dimen/text_14" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dimen_12"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cont_beichakanpaobi"
                android:textColor="@color/c_333333"
                android:textSize="@dimen/text_13" />

            <EditText
                android:id="@+id/paobi_shouji"
                android:layout_width="@dimen/dimen_34"
                android:layout_height="wrap_content"
                android:textColor="@color/c_fc508e"
                android:textSize="@dimen/text_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/min_paobi"
                android:textColor="@color/c_fc508e"
                android:textSize="@dimen/text_14" />
        </LinearLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/queding"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_44"
        android:layout_marginLeft="@dimen/dimen_12"
        android:layout_marginRight="@dimen/dimen_12"
        android:layout_marginTop="@dimen/dimen_30"
        android:background="@drawable/ll_cash"
        android:text="@string/cont_queding"
        android:textColor="@color/c_ffffff"
        android:textSize="@dimen/text_16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/dimen_12"
        android:layout_marginTop="@dimen/dimen_30"
        android:text="@string/cont_shuoming"
        android:textColor="@color/c_fc508e"
        android:textSize="@dimen/text_13" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/dimen_12"
        android:layout_marginTop="@dimen/dimen_5"
        android:text="@string/cont_tv1"
        android:textColor="@color/c_fc508e"
        android:textSize="@dimen/text_13" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/dimen_12"
        android:layout_marginTop="@dimen/dimen_5"
        android:text="@string/cont_tv2"
        android:textColor="@color/c_fc508e"
        android:textSize="@dimen/text_13" />

</LinearLayout>
