<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/mGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/c_ffffff"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dimen_8"
            android:paddingTop="@dimen/dimen_8">

            <RadioButton
                android:id="@+id/mRbGroupbooking"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@drawable/bt_home_selector"
                android:gravity="center"
                android:text="@string/menu_home"
                android:textColor="@color/selector_bottom_navigation"
                android:textSize="@dimen/text_12" />

            <RadioButton
                android:id="@+id/mRbEnquiry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/bt_find_selector"
                android:gravity="center"
                android:text="@string/menu_find"
                android:textColor="@color/selector_bottom_navigation"
                android:textSize="@dimen/text_12" />

            <RadioButton
                android:id="@+id/mRbCustomer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/bt_message_selector"
                android:gravity="center"
                android:text="@string/menu_message"
                android:textColor="@color/selector_bottom_navigation"
                android:textSize="@dimen/text_12" />

            <RadioButton
                android:id="@+id/mRbMine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/bt_mine_selector"
                android:gravity="center"
                android:text="@string/menu_mine"
                android:textColor="@color/selector_bottom_navigation"
                android:textSize="@dimen/text_12" />
        </RadioGroup>
    </LinearLayout>
</TabHost>
