<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_ffffff"
    android:orientation="vertical"
    tools:context="com.user.paopao.main.mine.photo.MyPhotoActivity">

    <com.user.paopao.widget.titleview.TitleView
        android:id="@+id/mtitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/c_F4F4F4" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_7"
                android:layout_marginLeft="@dimen/dimen_12"
                android:layout_marginRight="@dimen/dimen_12"
                android:layout_marginTop="@dimen/dimen_12"
                android:text="@string/photo_tv1"
                android:textColor="@color/c_fc508e"
                android:textSize="@dimen/text_13" />

            <com.user.paopao.widget.NoSrollerRecycler
                android:id="@+id/mRecycler_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_15"
                android:layout_marginLeft="@dimen/dimen_12"
                android:layout_marginRight="@dimen/dimen_12"
                android:layout_marginTop="@dimen/dimen_7"
                android:text="@string/photo_tv2"
                android:textColor="@color/c_fc508e"
                android:textSize="@dimen/text_13" />

            <com.user.paopao.widget.NoSrollerRecycler
                android:id="@+id/mRecycler_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_12"
                android:layout_marginRight="@dimen/dimen_12" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="@dimen/dimen_12"
                android:layout_marginLeft="@dimen/dimen_12"
                android:layout_marginRight="@dimen/dimen_12"
                android:layout_marginTop="@dimen/dimen_19"
                android:background="@drawable/ll_cash"
                android:text="@string/cont_queding"
                android:textColor="@color/c_ffffff"
                android:textSize="@dimen/text_16" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
